// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Security Dashboard default states sets up group-level 1`] = `
<div>
  <div>
    <header
      class="gl-flex gl-flex-wrap gl-gap-y-3 gl-items-center gl-justify-between gl-my-5"
    >
      <div
        class="gl-flex gl-flex-wrap gl-gap-x-5 gl-gap-y-3 gl-justify-between gl-w-full md:gl-flex-nowrap"
      >
        <h1
          class="!gl-m-0 gl-heading-1"
          data-testid="page-heading"
        >
          Security dashboard
        </h1>
        <div
          class="gl-flex gl-flex-wrap gl-gap-3 gl-items-center gl-shrink-0 gl-w-full lg:gl-mt-2 md:gl-mt-1 page-heading-actions sm:gl-w-auto"
          data-testid="page-heading-actions"
        />
      </div>
    </header>
    <div
      class="gl-grid security-charts"
    >
      <section
        class="gl-border-1 gl-border-default gl-border-solid gl-flex gl-flex-col gl-rounded-base"
      >
        <header
          class="gl-p-5"
        >
          <h4
            class="gl-mb-3 gl-mt-0"
            data-testid="title"
          >
            Vulnerabilities over time
          </h4>
          <p
            class="gl-m-0 gl-text-subtle"
            data-testid="help-text"
          >
            June 6th to today
          </p>
          <div
            class="gl-mt-5"
            data-testid="controls"
          >
            <div
              class="btn-group gl-button-group gl-flex"
              role="group"
            >
              <button
                class="btn btn-default btn-md gl-button selected"
                type="button"
              >
                <span
                  class="gl-button-text"
                >
                  30 Days
                </span>
              </button>
              <button
                class="btn btn-default btn-md gl-button"
                type="button"
              >
                <span
                  class="gl-button-text"
                >
                  60 Days
                </span>
              </button>
              <button
                class="btn btn-default btn-md gl-button"
                type="button"
              >
                <span
                  class="gl-button-text"
                >
                  90 Days
                </span>
              </button>
            </div>
          </div>
        </header>
        <div
          aria-label="Loading"
          class="gl-my-12 gl-spinner-container"
          role="status"
        >
          <span
            class="!gl-align-text-bottom gl-spinner gl-spinner-dark gl-spinner-lg"
          />
        </div>
      </section>
      <section
        class="gl-border-1 gl-border-default gl-border-solid gl-flex gl-flex-col gl-rounded-base"
      >
        <header
          class="gl-p-5"
        >
          <h4
            class="gl-mb-3 gl-mt-0"
            data-testid="title"
          >
            Project security status
          </h4>
          <p
            class="gl-m-0 gl-text-subtle"
            data-testid="help-text"
          />
        </header>
        <div
          aria-label="Loading"
          class="gl-my-12 gl-spinner-container"
          role="status"
        >
          <span
            class="!gl-align-text-bottom gl-spinner gl-spinner-dark gl-spinner-lg"
          />
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Security Dashboard default states sets up group-level with \`groupSecurityDashboardNew\` feature flag set to \`true\` 1`] = `
<div>
  <div
    data-testid="security-dashboard-new"
  >
    <section
      class="gl-flex gl-items-center gl-my-4"
    >
      <div
        class="gl-flex gl-flex-col gl-w-full"
      >
        <div
          class="gl-flex gl-items-center"
        >
          <h2
            class="gl-my-0"
            data-testid="title"
          >
            Security dashboard
          </h2>
        </div>
        <div
          class="gl-flex gl-mt-3"
        >
          <p
            class="gl-mb-0"
            data-testid="description"
          >
            This dashboard provides an overview of your security vulnerabilities.
          </p>
        </div>
      </div>
    </section>
    <div
      class="gl-flex"
    >
      <div
        class="gl-flex gl-flex-col gl-grow"
      >
        <section
          class="gl-flex gl-flex-row gl-flex-wrap gl-gap-5 gl-pb-3 gl-pt-4"
          data-testid="filters-container"
        >
          <div
            class="gl-search-box-by-click gl-search-box-by-click-with-search-button input-group"
            data-testid="filtered-search-input"
            role="group"
          >
            <div
              class="gl-filtered-search-scrollable-container gl-filtered-search-scrollable-container-with-search-button"
            >
              <div
                class="gl-filtered-search-scrollable"
              >
                <div
                  class="gl-filtered-search-item gl-filtered-search-last-item gl-filtered-search-term gl-h-auto"
                  data-testid="filtered-search-term"
                >
                  <div
                    class="gl-filtered-search-term-token gl-filtered-search-token-segment"
                    data-testid="filtered-search-token-segment"
                  >
                    <input
                      aria-label="Search"
                      class="gl-filtered-search-term-input"
                      data-testid="filtered-search-term-input"
                      placeholder="Filter results..."
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="input-group-append"
            >
              <button
                aria-label="Search"
                class="btn btn-default btn-default-tertiary btn-icon btn-md gl-button gl-search-box-by-click-search-button"
                data-testid="search-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="gl-button-icon gl-fill-current gl-icon s16"
                  data-testid="search-icon"
                  role="img"
                >
                  <use
                    href="file-mock#search"
                  />
                </svg>
              </button>
            </div>
          </div>
        </section>
        <div
          class="-gl-mx-3 grid-stack"
          data-testid="gridstack-grid"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Security Dashboard default states sets up instance-level 1`] = `
<div>
  <div>
    <header
      class="gl-flex gl-flex-wrap gl-gap-y-3 gl-items-center gl-justify-between gl-my-5"
    >
      <div
        class="gl-flex gl-flex-wrap gl-gap-x-5 gl-gap-y-3 gl-justify-between gl-w-full md:gl-flex-nowrap"
      >
        <h1
          class="!gl-m-0 gl-heading-1"
          data-testid="page-heading"
        >
          Security dashboard
        </h1>
        <div
          class="gl-flex gl-flex-wrap gl-gap-3 gl-items-center gl-shrink-0 gl-w-full lg:gl-mt-2 md:gl-mt-1 page-heading-actions sm:gl-w-auto"
          data-testid="page-heading-actions"
        />
      </div>
    </header>
    <div
      class="gl-grid security-charts"
    >
      <section
        class="gl-border-1 gl-border-default gl-border-solid gl-flex gl-flex-col gl-rounded-base"
      >
        <header
          class="gl-p-5"
        >
          <h4
            class="gl-mb-3 gl-mt-0"
            data-testid="title"
          >
            Vulnerabilities over time
          </h4>
          <p
            class="gl-m-0 gl-text-subtle"
            data-testid="help-text"
          >
            June 6th to today
          </p>
          <div
            class="gl-mt-5"
            data-testid="controls"
          >
            <div
              class="btn-group gl-button-group gl-flex"
              role="group"
            >
              <button
                class="btn btn-default btn-md gl-button selected"
                type="button"
              >
                <span
                  class="gl-button-text"
                >
                  30 Days
                </span>
              </button>
              <button
                class="btn btn-default btn-md gl-button"
                type="button"
              >
                <span
                  class="gl-button-text"
                >
                  60 Days
                </span>
              </button>
              <button
                class="btn btn-default btn-md gl-button"
                type="button"
              >
                <span
                  class="gl-button-text"
                >
                  90 Days
                </span>
              </button>
            </div>
          </div>
        </header>
        <div
          aria-label="Loading"
          class="gl-my-12 gl-spinner-container"
          role="status"
        >
          <span
            class="!gl-align-text-bottom gl-spinner gl-spinner-dark gl-spinner-lg"
          />
        </div>
      </section>
      <section
        class="gl-border-1 gl-border-default gl-border-solid gl-flex gl-flex-col gl-rounded-base"
      >
        <header
          class="gl-p-5"
        >
          <h4
            class="gl-mb-3 gl-mt-0"
            data-testid="title"
          >
            Project security status
          </h4>
          <p
            class="gl-m-0 gl-text-subtle"
            data-testid="help-text"
          />
        </header>
        <div
          aria-label="Loading"
          class="gl-my-12 gl-spinner-container"
          role="status"
        >
          <span
            class="!gl-align-text-bottom gl-spinner gl-spinner-dark gl-spinner-lg"
          />
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Security Dashboard default states sets up project-level 1`] = `
<div>
  <div>
    <header
      class="gl-flex gl-flex-wrap gl-gap-y-3 gl-items-center gl-justify-between gl-my-5"
    >
      <div
        class="gl-flex gl-flex-wrap gl-gap-x-5 gl-gap-y-3 gl-justify-between gl-w-full md:gl-flex-nowrap"
      >
        <h1
          class="!gl-m-0 gl-heading-1"
          data-testid="page-heading"
        >
          Security dashboard
        </h1>
        <div
          class="gl-flex gl-flex-wrap gl-gap-3 gl-items-center gl-shrink-0 gl-w-full lg:gl-mt-2 md:gl-mt-1 page-heading-actions sm:gl-w-auto"
          data-testid="page-heading-actions"
        />
      </div>
      <div
        class="gl-text-subtle gl-w-full"
        data-testid="page-heading-description"
      >
        Historical view of open vulnerabilities in the default branch. Excludes vulnerabilities that were resolved or dismissed.
        <a
          class="gl-link"
          href="/help/user/application_security/security_dashboard/_index#project-security-dashboard"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more.
        </a>
      </div>
    </header>
    <div>
      <div
        aria-label="Loading"
        class="gl-mt-6 gl-spinner-container"
        role="status"
      >
        <span
          class="!gl-align-text-bottom gl-spinner gl-spinner-dark gl-spinner-lg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Security Dashboard error states has unavailable pages 1`] = `
<div>
  <section
    class="gl-empty-state gl-flex gl-flex-col gl-text-center"
  >
    <div
      class="gl-max-w-full"
    >
      <img
        alt=""
        class="gl-dark-invert-keep-hue gl-max-w-full"
        src="/test/empty_state.svg"
      />
    </div>
    <div
      class="gl-empty-state-content gl-m-auto gl-mx-auto gl-my-0 gl-p-5"
      data-testid="gl-empty-state-content"
    >
      <h1
        class="gl-leading-36 gl-mb-0 gl-mt-0 gl-text-size-h-display h4"
      >
        Oops, something doesn't seem right.
      </h1>
      <p
        class="gl-mb-0 gl-mt-4 gl-text-subtle"
      >
        Either you don't have permission to view this dashboard or the dashboard has not been setup. Please check your permission settings with your administrator or check your dashboard configurations to proceed.
      </p>
      <div
        class="gl-flex gl-flex-wrap gl-justify-center gl-mt-5"
      >
        <a
          class="btn btn-confirm btn-md gl-button gl-mb-3 gl-mx-2"
          href="/help/user/application_security/detect/security_configuration#with-the-ui"
        >
          <span
            class="gl-button-text"
          >
            Learn more about setting up your dashboard
          </span>
        </a>
      </div>
    </div>
  </section>
</div>
`;
